--- a/基础/计算机网络.md
+++ b/基础/计算机网络.md
@@ -6,3 +6,30 @@ SSL（Secure Sockets Layer），安全套接字层，是一种加密安全协议
 由Netscape（网景）于1995年开发，旨在用于 Internet 通信的隐私、身份验证和数据完整性
 现代 TSL 的前身
 实施 TSL / SSL 的网站URL中带有 "HTTPS"
+
+
+### 传输层：TCP和UDP
+
+TCP 的 “三次握手” 和 “四次挥手”
+
++ 三次握手：
+
+第一次握手：客户端会发送syn包（syn=x）到服务器，并进入SYN_SEND状态，等待服务器确认
+
+第二次握手：服务器收到了syn包，必须确认客户的syn（ack=x+1）（即发送一个ACK包），同时自己也发送一个syn包（syn=y），即SYN + ACK包，此时服务器进入SYN_RECV状态
+
+第三次握手：客户端收到服务器的SYN+ACK包，向服务器发送确认包ACK（ack=y+1），此包发送完毕，客户端和服务器进入established状态，完成三次握手
+
+握手过程中不包含数据，握手完毕后，客户端和服务器才开始进行数据传输
+
+
+
++ 四次挥手：
+
+第一次挥手：主动关闭方发送一个FIN，用来关闭主动方到被动关闭方的数据传送，也就是主动关闭方告诉被动关闭方：我不会再发送数据了，但是，这时的主动关闭方还是可以接收数据的
+
+第二次挥手：被动关闭方收到FIN包后，发送一个ACK包给对方，确认序号为收到序号+1
+
+第三次挥手：被动关闭方发送一个FIN包，用来关闭被动关闭方到主动关闭方之间的数据传输，即告诉主动关闭方，我的数据也发送完了
+
+第四次挥手：主动关闭方收到FIN包后，发送一个ACK包给被动关闭方，确认序号为收到序号+1
