--- a/其他/单词本.md
+++ b/其他/单词本.md
@@ -34,3 +34,61 @@ adapt          适应
 redirect       重定向
 specify        指定
 directive      指示
+
+
+Handling                处理
+essential               基本的
+solid                   坚硬的
+below                   以下
+sense                   感觉
+invalid                 无效的
+fatal                   致命的
+random                  随机的
+instead of              代替
+so that                 以便
+predefined              预定义的
+slice                   片
+except                  除了
+contain                 包含
+argument                争论
+pair                    一对
+hitch                   拴住
+signature               签名
+preserves               果酱
+backward                落后
+compatibility           兼容性
+reduce                  减少
+duplication             复制
+associate               联系
+generated               生成的
+syntax                  句法
+blank identifier        空白标识符
+underscore              下划线
+representing            代表
+stable                  稳定的
+by the way              顺便一提
+expose                  暴露
+built-in                内置
+Specifically            具体来说
+conventions             惯例
+specific                具体的
+verbose                 冗长的
+specified               指定的
+accidentally            偶然
+compile                 编译
+locally                 本地
+couple                  夫妻
+install                 安装
+shortcut                捷径
+frequent                经常
+executable              可执行文件
+generate                产生
+additional              额外的
+along with              随着
+confirm                 确认
+currently               现在
+prompt                  迅速的
+specify                 指定
+Discover                发现
+across                  穿过
+workspaces              工作空间
