--- a/其他/单词本.md
+++ b/其他/单词本.md
@@ -1,39 +1,39 @@
-dependency     依赖性
-tracking       追踪
-enable         使能够
-contained      包含
-actual         实际的
-typically      通常
-declare        宣布
-formatting     格式化
-executes       执行
-implemented    实施的
-external       外部的
-locate         定位
-section        部分
-under          在下面
-improved       改进的
-upgrade        升级
-fundamental    基本的
-intended       故意的
-discrete       离散的
-a set of       一套
-financial      金融的
-analysis       分析
-specifies      指定
-functionality  功能性
-so far         迄今为止
-direct         直接的
-reproducible   可重现的
-Implement      实施
-capital letter 大写字母
-shortcut       捷径
-greeting       问候语
-replace        代替
-adapt          适应
-redirect       重定向
-specify        指定
-directive      指示
+dependency              依赖性
+tracking                追踪
+enable                  使能够
+contained               包含
+actual                  实际的
+typically               通常
+declare                 宣布
+formatting              格式化
+executes                执行
+implemented             实施的
+external                外部的
+locate                  定位
+section                 部分
+under                   在下面
+improved                改进的
+upgrade                 升级
+fundamental             基本的
+intended                故意的
+discrete                离散的
+a set of                一套
+financial               金融的
+analysis                分析
+specifies               指定
+functionality           功能性
+so far                  迄今为止
+direct                  直接的
+reproducible            可重现的
+Implement               实施
+capital letter          大写字母
+shortcut                捷径
+greeting                问候语
+replace                 代替
+adapt                   适应
+redirect                重定向
+specify                 指定
+directive               指示
 
 
 Handling                处理
@@ -92,3 +92,59 @@ specify                 指定
 Discover                发现
 across                  穿过
 workspaces              工作空间
+
+
+Table                   桌子
+Prerequisites           先决条件
+specify                 指定
+similar                 相似的
+directive               指示
+active                  积极的
+refer to                参考
+checked out             检查过了
+instead of              代替
+accessing               访问
+relational              关系型的
+
+
+executing               执行
+transactions            交易
+vintage jazz records    复古爵士乐唱片
+prompt                  迅速的
+driver                  司机
+Locate                  定位
+translate               翻译
+identify                确认
+pointer                 指针
+beneath                 下面
+Declare                 宣布
+variable                多变的
+simplifies              简化
+immediately             立即地
+declaration             宣言
+previous                以前的
+above                   多于
+definition              定义
+Beneath                 下面
+album                   专辑
+artist                  艺术家
+correspond              对应
+statement               陈述
+separating              分离
+Defer                   推迟
+endpoints               端点
+associated with         有关联
+route                   路线
+retrieve                取回
+marshal                 元帅
+typically               通常
+interact                相互影响
+declaration             宣言
+standalone              独立的
+opposed                 反对
+prepare                 准备
+preceding               前
+associate               联系
+specific                具体的
+retrieve                取回
+generics                仿制药
